o Slightly improved rules parsing (order of sid and msg does not matter).
o oinkmaster.conf will be searched for in /etc/ and /usr/local/etc/ by default.
o Make contrib/create-sidmap.pl and contrib/addsid.pl take an arbtitrary number
  of directories as argument.
o Added a FAQ.
o Use ISO 8601 format for date string in backup filename.



v0.8 - 20030902
~~~~~~~~~~~~~~~
o Experimental multi-line rule support.
o Make contrib/addsid.pl and contrib/addmsg.pl handle multi-line rules as well.
o Added create-sidmap.pl to contrib section. It's a script that generates 
  a SID map from a directory with rules files. (Like snort's regen-sidmap,
  but this one handles multi-line rules).
o The 'modifysid' keyword now regards the arguments as regular expressions.
  So if you already use this function, you may have to adjust the arguments.
  Based on a patch from operator@email.it. Also added a bunch of examples.
o Understand Snort_inline's "drop", "sdrop" and "reject" rules.
o You can now start Perl with tainting checks enabled if you like, if
  you have a reasonably recent version of Perl.
o The default temporary directory will be checked for in the environment
  variables TMP, TMPDIR and TEMPDIR. "/tmp" will be used if none was set.
  You can override this by setting tmpdir in oinkmaster.conf.
o A bunch of Win32/Cygwin fixes, mostly from Ueli Kistler <iuk@gmx.ch>.
o A bunch of fixes that makes it work on native Win32 with ActivePerl.
o Added a README.win32 with information about Oinkmaster on Windows.
o Added command line argument "-T" to test the configuration and then exit.
o Better check for duplicate SIDs. Check is done across all files now, and
  duplicate SIDs in downloaded archive are discarded (only first one is 
  kept) and not copied to the local files. This will avoid some annoying 
  warning messages about duplicates in the local files that won't go away 
  until the files gets updated again. Pointed out by elof@sentor.se.