@@ -33,6 +33,9 @@ o Make contrib/create-sidmap.pl and contrib/addsid.pl take an arbtitrary number
   of directories as argument.
 o Added a FAQ.
 o Use ISO 8601 format for date string in backup filename.
+o wget is now always run in verbose, although the output is not displayed unless
+  you run Oinkmaster in verbose mode as well, or if an error occurs.
+o Many other minor improvements.
 
 
 
